# invinoveritas

./: .gitignore  .mcpregistry_github_token  .mcpregistry_registry_token  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.agent_zero  LICENSE  README.md  agent_client.py  ai.py  app.py  backfill_starter_sats.py  bridge.py  broadcaasterv1.pý  config.py  glama.json  healthcheck.sh  index.html  invinoveritas_roadmap.md  listnerv1.py  llms.txt  mcp_client.py  mcp_server.py  node_bridge.py  nostr_listener.py  openai.json  openapi-gpt.json  requirements.txt  server.json  server.py  smithery-config-schema.json  smithery.yaml  sovereign_earner.py  start-bridge.sh  start.sh  vps_bridge.py  ws-test.html
.well-known/: ai-plugin.json
.well-known/mcp/: server-card.json
agents/: agent_content.py  agent_growth.py  agent_research.py  agent_trading.py  agent_zero.py  multi_agent_runner.py  shared.py
agents/agent_one/: Dockerfile  README.md  agent_one.py  agent_one.service  requirements.txt
agents/viperclaw1/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md
bundles/mcp/: README.md  mcp.json  package.json
bundles/openclaw/: README.md  package.json
bundles/openclaw/.claude-plugin/: plugin.json
content/: 00-Prologue.docx  01-Chapter One.docx  02-Opening Vibes or a Prelude to a Party.docx  03-Chapter Two.docx  04-Mythmaking Monday.docx  05-Chapter Three.docx  06-Warehouse Life Episode IV_ Girls.docx  07-Intermission I.docx  08-Chapter Four.docx  09-The Sky is Taking on Light.docx  10-Chapter Five.docx  11-You Jump First, I_ll Watch.docx  12-Chapter Six.docx  13-Feed Me.docx  14-Chapter Seven.docx  15-Warehouse Life Episode V_ Career Paths.docx  16-Intermission II.docx  17-Chapter Eight.docx  18-Been Up So Long Looks Like Down To Me.docx  19-Chapter Nine.docx  20-Stars Are Shaking.docx  21-Chapter Ten.docx  22-Beyond the Ferris Wheel.docx  23-Chapter Eleven.docx  24-There Is a World Elsewhere.docx  25-Chapter Twelve.docx  26-Warehouse Life Episode VI_ Contact.docx  27-Intermission III.docx  28-Go Pawn It on the Mountain.docx  29-Epilogue.docx  full text.docx
deploy/: agent-zero.service
docs/: ROADMAP.md  ROADMAP_MARKETPLACE_GROWTH.md  agent-wallet-guide.md  llm-integration-prompt.md  wallet_onboarding.md
examples/: invinoveritas_strategy.py
examples/marketplace/: agent_revenue_demo.py
examples/trading/: trading_bot_net_profit.py
scripts/: add_copyright_and_stage.py  analyze_entry_quality.py  analyze_exit_quality.py  backfill_post_exit.py  create_waternova_offers.py  delete_old_nostr_notes.py
sdk/: README.md  invinoveritas_sdk.py  langchain.py  langchain_handler.py  nwc.py  pyproject.toml  smart.py  test_invinoveritas_sdk.py
sdk/invinoveritas/: __init__.py  langchain.py  marketplace.py  providers.py  smart.py
services/: __init__.py  common.py
services/agent_to_agent/: __init__.py  core.py
services/creative/: __init__.py  core.py
services/games/: __init__.py  core.py
services/passive/: __init__.py  core.py
services/self_improvement/: __init__.py  core.py
