[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invinoveritas"
version = "0.1.0"
description = "Lightning-paid reasoning and decision intelligence for autonomous agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "invinoveritas", email = "babyblueviperbusiness@gmail.com" }]
keywords = ["lightning", "bitcoin", "l402", "ai", "agents", "mcp", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
async = ["httpx>=0.25"]
dev = ["httpx>=0.25", "pytest>=7", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://invinoveritas.onrender.com"
Repository = "https://github.com/babyblueviper1/invinoveritas"
"Bug Tracker" = "https://github.com/babyblueviper1/invinoveritas/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["invinoveritas_sdk*"]
