[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invinoveritas"
version = "0.3.0"
description = "Lightning-paid reasoning and decision intelligence for autonomous agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "invinoveritas", email = "babyblueviperbusiness@gmail.com" }]
keywords = ["lightning", "bitcoin", "l402", "ai", "agents", "mcp", "reasoning", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["requests>=2.28", "httpx>=0.25"]

[project.optional-dependencies]
async = ["httpx>=0.25"]
langchain = ["langchain-core>=0.1.0", "langchain>=0.1.0", "pydantic>=2.0"]
lnd = []
lnd-grpc = ["grpcio>=1.50", "grpcio-tools>=1.50"]
nwc = ["websockets>=12.0", "coincurve>=20.0", "cryptography>=41.0"]
dev = [
    "httpx>=0.25",
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.1.0",
    "langchain>=0.1.0",
    "pydantic>=2.0"
]

[project.urls]
Homepage = "https://invinoveritas.onrender.com"
Repository = "https://github.com/babyblueviper1/invinoveritas"
"Bug Tracker" = "https://github.com/babyblueviper1/invinoveritas/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["invinoveritas_sdk*"]
